--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "next-videos": "^1.4.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1"
+    "swiper": "^11.1.1"
   },
   "devDependencies": {
     "eslint": "^8",
